--- a/package.json
+++ b/package.json
@@ -31,7 +31,19 @@
 				"command": "codelink.copy",
 				"title": "Copy CodeLink"
 			}
-		]
+		],
+        "keybindings": [
+            {
+                "command": "codelink.open",
+                "key": "alt+g",
+                "mac": "alt+g"
+            },
+            {
+                "command": "codelink.copy",
+                "key": "alt+c",
+                "mac": "alt+c"
+            }
+        ]
 	},
 	"scripts": {
 		"vscode:prepublish": "npm run compile",
